# 2048

./: CMakeLists.txt  README.md
res/textures/: CMakeLists.txt
src/: main.cpp
src/Game/: Game2048.cpp  Game2048.hpp
